Fix multiple scrollbars and add account info text

--- a/components/css/auth.css
+++ b/components/css/auth.css
@@ -84,35 +84,39 @@ span.psw a {
     color: #ef852e;
 }
 
+.hint {
+    margin-top: 15px;
+    opacity: 50%;
+    font-size: 0.75rem;
+}
+
 /* The Modal (background) */
 .modal {
     display: none;
-    /* Hidden by default */
     position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
     left: 0;
     top: 0;
+    height: 100vh;
+    max-height: 100vh;
     width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
     overflow: auto;
-    /* Enable scroll if needed */
     background-color: rgb(0, 0, 0);
-    /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
-    padding-top: 60px;
     font-family: Rubik;
     z-index: 999;
+}
+
+.flex-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
 }
 
 /* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
-    margin: 5% auto 15% auto;
     /* 5% from the top, 15% from the bottom and centered */
     border: 1px solid #888;
     width: 550px;
